Minor Fixes     - Do not update terms seen by user when config is updated     - Update terms Help text     - Do not stop loaders just before redirecting to another page     - Footer buttons and text on terms_of_service page are aligned to bottom     - Update tests accordingly

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -644,6 +644,10 @@
         margin-bottom: 30px;
         padding: 60px 10px 0;
 
+        .min-height--fill {
+            min-height: calc(100vh - 526px);
+        }
+
         .signup-team__name {
             font-size: 2em;
         }
@@ -1823,6 +1827,14 @@
 
         .signup-team__name {
             font-size: 2em;
+        }
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .signup-team__container {
+        .min-height--fill {
+            min-height: 0;
         }
     }
 }
