--- a/sass/routes/_signup.scss
+++ b/sass/routes/_signup.scss
@@ -57,6 +57,10 @@
         @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6));
     }
 
+    .min-height--fill {
+        min-height: calc(100vh - 444px);
+    }
+
     h1,
     h2,
     h3,
